ci: regenerated with OpenAPI Doc 1.2.0, Speakeay CLI 1.8.6